Fix Hang top white spaces
This white spaces should be reduced like other paragraphs.

--- a/src/css/content/hang.css
+++ b/src/css/content/hang.css
@@ -22,3 +22,7 @@
   padding: var(--width-gap-small);
   width: 100%;
 }
+
+.hang + p {
+  margin-top: var(--margin-small);
+}
